--- a/static/skeleton.css
+++ b/static/skeleton.css
@@ -240,3 +240,28 @@
       width: 0;
       height: 0;
     }
+
+
+.container h2, .container img {
+display: inline;
+vertical-align: middle;
+}
+* {
+-moz-box-sizing: border-box;
+-webkit-box-sizing: border-box;
+box-sizing: border-box;
+}
+body    {
+color: #333333;
+padding: 0px;
+    }
+img {
+max-width: 100%;
+}
+#top {
+width: 100%;
+background: #0096D6;
+border-bottom: 3px solid #efefef;
+padding: 14px;
+margin: 0px;
+}
